# mishui-dictionary

./: CMakeLists.txt  ConlangDictionary.cpp  ConlangDictionary.h  LICENSE  README.md  main.cpp  widget.cpp  widget.h  widget.ui
